# game_of_thrones

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DOC.md  README.md  conftest.py  docker-compose.dev.yml  docker-compose.test.yml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  schema.sql
.github/workflows/: tests.yml
backend/: Dockerfile.dev  conftest.py  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/endpoints/: cubes.py  matches.py  rounds.py  seasons.py  teams.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: cubes.py  matches.py  seasons.py  teams.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/schemas/: cube.py  match.py  round.py  score.py  season.py  team.py
backend/db/: session.py
backend/db/models/: cube_control.py  cubes.py  matches.py  rounds.py  scores.py  teams.py
backend/tests/: conftest.py  test_cubes.py  test_matches.py  test_seasons.py  test_teams.py
db/: __init__.py  init_db.py  interface.py
db/models/: __init__.py  base.py  cube_control.py  cubes.py  matches.py  rounds.py  scores.py  seasons.py  teams.py
frontend/: Dockerfile.dev  index.html  openapi-generator-config.yaml  openapi.json  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
