[project]
name = "game-of-thrones"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "surrealdb>=0.4.1",
    "uvicorn>=0.34.0",
]
